--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ notebook = "^6.5.4"
 numpy = "^1.24.3"
 tqdm = "^4.65.0"
 pymongo = "^4.3.3"
+opensearch-py = "^2.2.0"
 matplotlib = "^3.7.1"
 ase = "^3.22.1"
 lark = "^1.1.5"
