Update admin default password in CI

--- a/.github/workflows/opensearch.yml
+++ b/.github/workflows/opensearch.yml
@@ -44,4 +44,5 @@ jobs:
           poetry run python -m unittest -v tests
         env:
           port: 9250
+          opensearch-version: ${{ matrix.opensearch }}
           security_enabled: ${{ matrix.security-enabled }}
